# MTA_Datathon

./: README.md
Backend/: .gitignore  README.md  pyproject.toml
Backend/src/: app.py  playground.ipynb  utils.py
Backend/src/outputs/: complex_mapping.csv
api/: README.md  main.py  pyproject.toml  utils.py
api/mta_datathon/: __init__.py
api/src/: app.py  main.py
api/src/outputs/: new_ridership_time_strata.json
data/: playground.ipynb
data/outputs/: new_ridership.json  new_ridership_times.json
frontend/: biome.json  bun.lockb  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.js
frontend/src/: App.tsx
frontend/src/assets/: lines.json  stations.json
frontend/src/common/: ConcentricChart.tsx  FilterWindow.tsx  color-helpers.tsx
frontend/src/components/ui/: card.tsx  input.tsx  select.tsx
