[project]
name = "mta-datathon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Neal Paresh Patel", email = "59032397+Desitrain22@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mta_datathon"]
