[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Neal P. Patel <59032397+Desitrain22@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
